Final Submission traind model and geerate TV script

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,10 +202,9 @@
     "    tokens['?'] = '<QUESTION_MARK>'\n",
     "    tokens['('] = '<LEFT_PAREN>'\n",
     "    tokens[')'] = '<RIGHT_PAREN>'\n",
-    "    tokens['?'] = '<QUESTION_MARK>'\n",
     "    tokens['-'] = '<DASH>'\n",
     "    tokens['\\n'] = '<NEW_LINE>'    \n",
-    "    return tokens\n",
+    "    return tokens    \n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -219,12 +218,12 @@
    "source": [
     "## Pre-process all the data and save it\n",
     "\n",
-    "Running the code cell below will pre-process all the data and save it to file. You're encouraged to look at the code for `preprocess_and_save_data` in the `helpers.py` file to see what it's doing in detail, but you do not need to change this code."
+    "Running the code cell below will pre-process all the data and save it to file. You're encouraged to lok at the code for `preprocess_and_save_data` in the `helpers.py` file to see what it's doing in detail, but you do not need to change this code."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,17 +269,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No GPU found. Please use a GPU to train your neural network.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -335,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -419,19 +410,19 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 5])\n",
-      "tensor([[ 0,  1,  2,  3,  4],\n",
-      "        [ 1,  2,  3,  4,  5],\n",
-      "        [ 2,  3,  4,  5,  6],\n",
-      "        [ 3,  4,  5,  6,  7],\n",
-      "        [ 4,  5,  6,  7,  8],\n",
-      "        [ 5,  6,  7,  8,  9],\n",
-      "        [ 6,  7,  8,  9, 10],\n",
-      "        [ 7,  8,  9, 10, 11],\n",
-      "        [ 8,  9, 10, 11, 12],\n",
-      "        [ 9, 10, 11, 12, 13]])\n",
+      "tensor([[  0,   1,   2,   3,   4],\n",
+      "        [  1,   2,   3,   4,   5],\n",
+      "        [  2,   3,   4,   5,   6],\n",
+      "        [  3,   4,   5,   6,   7],\n",
+      "        [  4,   5,   6,   7,   8],\n",
+      "        [  5,   6,   7,   8,   9],\n",
+      "        [  6,   7,   8,   9,  10],\n",
+      "        [  7,   8,   9,  10,  11],\n",
+      "        [  8,   9,  10,  11,  12],\n",
+      "        [  9,  10,  11,  12,  13]])\n",
       "\n",
       "torch.Size([10])\n",
-      "tensor([ 5,  6,  7,  8,  9, 10, 11, 12, 13, 14])\n"
+      "tensor([  5,   6,   7,   8,   9,  10,  11,  12,  13,  14])\n"
      ]
     }
    ],
@@ -481,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +520,8 @@
     "        :param hidden: The hidden state        \n",
     "        :return: Two Tensors, the output of the neural network and the latest hidden state\n",
     "        \"\"\"\n",
-    "        # TODO: Implement function     \n",
+    "        # TODO: Implement function   \n",
+    "\n",
     "        batch_size = nn_input.size(0)\n",
     "        embeddings = self.embedding(nn_input)\n",
     "        lstm_out, hidden = self.lstm(embeddings, hidden)\n",
@@ -587,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -602,8 +594,8 @@
     "def forward_back_prop(rnn, optimizer, criterion, inp, target, hidden):\n",
     "    \"\"\"\n",
     "    Forward and backward propagation on the neural network\n",
-    "    :param rnn: The PyTorch Module that holds the neural network\n",
-    "    :param optimizer: The PyTorch optimizer for the neural network\n",
+    "    :param decoder: The PyTorch Module that holds the neural network\n",
+    "    :param decoder_optimizer: The PyTorch optimizer for the neural network\n",
     "    :param criterion: The PyTorch loss function\n",
     "    :param inp: A batch of input to the neural network\n",
     "    :param target: The target output for the batch of input\n",
@@ -615,7 +607,7 @@
     "    # move data to GPU, if available\n",
     "    if(train_on_gpu):\n",
     "        rnn.cuda()\n",
-    "        inp, labels = inp.cuda(), labels.cuda()\n",
+    "        inp, target = inp.cuda(), target.cuda()\n",
     "    \n",
     "    # Creating new variables for the hidden state\n",
     "    hidden_state = tuple([each.data for each in hidden])\n",
@@ -660,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +704,7 @@
     "- Set `batch_size` to the batch size.\n",
     "- Set `num_epochs` to the number of epochs to train for.\n",
     "- Set `learning_rate` to the learning rate for an Adam optimizer.\n",
-    "- Set `vocab_size` to the number of unique tokens in our vocabulary.\n",
+    "- Set `vocab_size` to the number of uniqe tokens in our vocabulary.\n",
     "- Set `output_size` to the desired size of the output.\n",
     "- Set `embedding_dim` to the embedding dimension; smaller than the vocab_size.\n",
     "- Set `hidden_dim` to the hidden dimension of your RNN.\n",
@@ -724,15 +716,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data params\n",
     "# Sequence Length\n",
-    "sequence_length = 10  # of words in a sequence\n",
+    "sequence_length = 10   # of words in a sequence\n",
     "# Batch Size\n",
-    "batch_size = 64\n",
+    "batch_size = 124\n",
     "\n",
     "# data loader - do not change\n",
     "train_loader = batch_data(int_text, sequence_length, batch_size)"
@@ -740,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,31 +748,14 @@
     "# Output size\n",
     "output_size = vocab_size\n",
     "# Embedding Dimension\n",
-    "embedding_dim = 200\n",
+    "embedding_dim = 300\n",
     "# Hidden Dimension\n",
-    "hidden_dim = 200\n",
+    "hidden_dim = 250\n",
     "# Number of RNN Layers\n",
     "n_layers = 2\n",
     "\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 2500"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21388\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(vocab_to_int))"
+    "show_every_n_batches = 3000"
    ]
   },
   {
@@ -796,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -804,115 +779,61 @@
      "output_type": "stream",
      "text": [
       "Training for 10 epoch(s)...\n",
-      "Epoch:    1/10    Loss: 5.01031172618866\n",
+      "Epoch:    1/10    Loss: 4.759609621683756\n",
       "\n",
-      "Epoch:    1/10    Loss: 4.482165451717377\n",
+      "Epoch:    1/10    Loss: 4.346393923044205\n",
       "\n",
-      "Epoch:    1/10    Loss: 4.462101901912689\n",
+      "Epoch:    2/10    Loss: 4.069427179659064\n",
       "\n",
-      "Epoch:    1/10    Loss: 4.260159673786164\n",
+      "Epoch:    2/10    Loss: 3.8749070834318795\n",
       "\n",
-      "Epoch:    1/10    Loss: 4.391179153251648\n",
+      "Epoch:    3/10    Loss: 3.785064739456559\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.1758298549995985\n",
+      "Epoch:    3/10    Loss: 3.687989406347275\n",
       "\n",
-      "Epoch:    2/10    Loss: 3.971363939380646\n",
+      "Epoch:    4/10    Loss: 3.6245896347149613\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.053598401927948\n",
+      "Epoch:    4/10    Loss: 3.5520698906580606\n",
       "\n",
-      "Epoch:    2/10    Loss: 3.923884739637375\n",
+      "Epoch:    5/10    Loss: 3.5131904677448595\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.085152771186829\n",
+      "Epoch:    5/10    Loss: 3.457548230568568\n",
       "\n",
-      "Epoch:    3/10    Loss: 3.957228402397607\n",
+      "Epoch:    6/10    Loss: 3.4316228781967837\n",
       "\n",
-      "Epoch:    3/10    Loss: 3.8127542830467225\n",
+      "Epoch:    6/10    Loss: 3.3843049159049987\n",
       "\n",
-      "Epoch:    3/10    Loss: 3.9049726345062257\n",
+      "Epoch:    7/10    Loss: 3.3692185382924897\n",
       "\n",
-      "Epoch:    3/10    Loss: 3.7802438185691836\n",
+      "Epoch:    7/10    Loss: 3.3292991554737092\n",
       "\n",
-      "Epoch:    3/10    Loss: 3.9317581760406495\n",
+      "Epoch:    8/10    Loss: 3.3189902314700803\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.8316450510429454\n",
+      "Epoch:    8/10    Loss: 3.285785508950551\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.7097221123695374\n",
+      "Epoch:    9/10    Loss: 3.27220196590883\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.8096480718135832\n",
+      "Epoch:    9/10    Loss: 3.2430316218535107\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.6825660425662994\n",
+      "Epoch:   10/10    Loss: 3.2332271241129598\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.8365585015296935\n",
-      "\n",
-      "Epoch:    5/10    Loss: 3.7551241167430773\n",
-      "\n",
-      "Epoch:    5/10    Loss: 3.6454661806106565\n",
-      "\n",
-      "Epoch:    5/10    Loss: 3.7453925698280335\n",
-      "\n",
-      "Epoch:    5/10    Loss: 3.626826202297211\n",
-      "\n",
-      "Epoch:    5/10    Loss: 3.7744779936790467\n",
-      "\n",
-      "Epoch:    6/10    Loss: 3.6989222084464854\n",
-      "\n",
-      "Epoch:    6/10    Loss: 3.5899012868881224\n",
-      "\n",
-      "Epoch:    6/10    Loss: 3.6922278608322143\n",
-      "\n",
-      "Epoch:    6/10    Loss: 3.579094237613678\n",
-      "\n",
-      "Epoch:    6/10    Loss: 3.718066817855835\n",
-      "\n",
-      "Epoch:    7/10    Loss: 3.652866151987931\n",
-      "\n",
-      "Epoch:    7/10    Loss: 3.548347198963165\n",
-      "\n",
-      "Epoch:    7/10    Loss: 3.652191520690918\n",
-      "\n",
-      "Epoch:    7/10    Loss: 3.5412931148052214\n",
-      "\n",
-      "Epoch:    7/10    Loss: 3.6749208377838136\n",
-      "\n",
-      "Epoch:    8/10    Loss: 3.615931141309898\n",
-      "\n",
-      "Epoch:    8/10    Loss: 3.515923402404785\n",
-      "\n",
-      "Epoch:    8/10    Loss: 3.6162898612976075\n",
-      "\n",
-      "Epoch:    8/10    Loss: 3.5124581162929536\n",
-      "\n",
-      "Epoch:    8/10    Loss: 3.6359316641807555\n",
-      "\n",
-      "Epoch:    9/10    Loss: 3.585954996157928\n",
-      "\n",
-      "Epoch:    9/10    Loss: 3.486670962142944\n",
-      "\n",
-      "Epoch:    9/10    Loss: 3.5893480214595797\n",
-      "\n",
-      "Epoch:    9/10    Loss: 3.4831671057701112\n",
-      "\n",
-      "Epoch:    9/10    Loss: 3.6088087183952333\n",
-      "\n",
-      "Epoch:   10/10    Loss: 3.559518477800475\n",
-      "\n",
-      "Epoch:   10/10    Loss: 3.4650469584465027\n",
-      "\n",
-      "Epoch:   10/10    Loss: 3.5572018217086794\n",
-      "\n",
-      "Epoch:   10/10    Loss: 3.449549657869339\n",
-      "\n",
-      "Epoch:   10/10    Loss: 3.570383434200287\n",
-      "\n",
-      "Model Trained and Saved\n"
+      "Epoch:   10/10    Loss: 3.209132636944453\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/mbuhliagah/opt/anaconda3/lib/python3.7/site-packages/torch/serialization.py:360: UserWarning: Couldn't retrieve source code for container of type RNN. It won't be checked for correctness upon loading.\n",
+      "/opt/conda/lib/python3.6/site-packages/torch/serialization.py:193: UserWarning: Couldn't retrieve source code for container of type RNN. It won't be checked for correctness upon loading.\n",
       "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Trained and Saved\n"
      ]
     }
    ],
@@ -957,6 +878,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "First training attempts, I tried with sequence_length = 10, batch_size = 64, learning_rate = 0.01, embedding_dim = 200, hidden_dim = 200, n_layers = 2 the loss was quite large and not dropping significantly.\n",
+    "my second approach was sequence_length = 10, batch_size = 1, learning_rate = 0.001, embedding_dim = 300, hidden_dim = 200, n_layers = 2 and still the loss was not droping. I tried with batch_size 64 and 100 and there was noticable improvment. \n",
+    "Final approach, after many attempts I reach the best hyperparameters that works for me which is sequence_length = 10, batch_size = 124, learning_rate = 0.001, embedding_dim = 300, hidden_dim = 250, n_layers = 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "# Checkpoint\n",
     "\n",
@@ -965,10 +895,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -995,10 +923,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -1054,11 +980,7 @@
     "        word = int_to_vocab[word_i]\n",
     "        predicted.append(word)     \n",
     "        \n",
-    "        if(train_on_gpu):\n",
-    "            current_seq = current_seq.cpu() # move to cpu\n",
     "        # the generated word becomes the next \"current sequence\" and the cycle can continue\n",
-    "        if train_on_gpu:\n",
-    "            current_seq = current_seq.cpu()\n",
     "        current_seq = np.roll(current_seq, -1, 1)\n",
     "        current_seq[-1][-1] = word_i\n",
     "    \n",
@@ -1091,15 +1013,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/ipykernel_launcher.py:41: UserWarning: RNN module weights are not part of single contiguous chunk of memory. This means they need to be compacted at every call, possibly greatly increasing memory usage. To compact weights again call flatten_parameters().\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kramer: immaturity.\n",
+      "\n",
+      "george: i think we were going to go to california and he was a little tired for you, so i was just trying to be the same thing.\n",
+      "\n",
+      "hoyt: yes, yes.\n",
+      "\n",
+      "elaine: i dont know if you could get a plane from the show of a prostitute.\n",
+      "\n",
+      "george: i think we can tell them to give you a rachel:.\n",
+      "\n",
+      "george: well, i'm sorry i'm not here.\n",
+      "\n",
+      "jerry: so, you know, i don't think so.\n",
+      "\n",
+      "estelle: well, maybe i could go down.\n",
+      "\n",
+      "hoyt: what are you doing?\n",
+      "\n",
+      "kramer: well, i can't.\n",
+      "\n",
+      "hoyt: well...\n",
+      "\n",
+      "george: i can't believe this is not necessary.\n",
+      "\n",
+      "hoyt: i think it's odd.\n",
+      "\n",
+      "jerry: oh, yeah.\n",
+      "\n",
+      "jerry: what did he say?\n",
+      "\n",
+      "elaine: i don't know if you can take it anymore.\n",
+      "\n",
+      "jerry: i think i can tell you what happened to the maid, but the only thing is, i have a tendency, and you could be able to tell him the truth!\n",
+      "\n",
+      "jerry: i don't think i was trying to get a nap to the show.\n",
+      "\n",
+      "jerry:(smug, competing) you don't want to be able to do it anymore.\n",
+      "\n",
+      "george: what?\n",
+      "\n",
+      "elaine: yeah. it's a shame.\n",
+      "\n",
+      "george: so, essentially, i don't think so.\n",
+      "\n",
+      "hoyt:(shocked) well, the only way you were in mortal danger is chow.\n",
+      "\n",
+      "elaine: oh yeah.\n",
+      "\n",
+      "jerry: so, you got a little freebie?\n",
+      "\n",
+      "kramer: no, i don't have it anymore.\n",
+      "\n",
+      "jerry: oh, no no.\n",
+      "\n",
+      "george: oh, that's right.\n",
+      "\n",
+      "elaine:(pointing at him) oh, hi, hey, jerry!!!\n",
+      "\n",
+      "george: i can't believe this. i can't get rid of it.\n",
+      "\n",
+      "jerry: what happened to you?\n",
+      "\n",
+      "george: yes, yes.\n",
+      "\n",
+      "hoyt: i think that's fantastic. it's a\n"
+     ]
+    }
+   ],
    "source": [
     "# run the cell multiple times to get different results!\n",
     "gen_length = 400 # modify the length to your preference\n",
-    "prime_word = 'jerry' # name for starting the script\n",
+    "prime_word = 'kramer' # name for starting the script\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -1120,10 +1119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# save script to a text file\n",
@@ -1170,9 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1193,7 +1188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.3"
   },
   "widgets": {
    "state": {},
